--- a/css/style.css
+++ b/css/style.css
@@ -3,47 +3,47 @@
 
 /*============== VARIABLES CSS ==============*/
 :root {
-    /*========== Colors ==========*/
-    --hue-color:242;
+   /*===== Colors =====*/
+   --hue-color:242;
 
-    /*========== HSL Color Mode ==========*/
-    --skin-color: hsl(342, 92%, 46%);
-    --title-color: hsl(var(--hue-color), 8%, 95%);
-    --text-color: hsl(var(--hue-color), 8%, 85%);
-    --body-color: hsl(var(--hue-color), 19%, 5%);
-    --box-color: hsl(var(--hue-color), 14%, 10%);
-    --scroll-bar-color: hsl(var(--hue-color), 12%, 38%);
-    --scroll-thumb-color: hsl(var(--hue-color), 12%, 26%);
+   /* HSL Color Mode */
+   --skin-color: hsl(342, 92%, 46%);
+   --title-color: hsl(var(--hue-color), 8%, 95%);
+   --text-color: hsl(var(--hue-color), 8%, 85%);
+   --body-color: hsl(var(--hue-color), 19%, 5%);
+   --box-color: hsl(var(--hue-color), 14%, 10%);
+   --scroll-bar-color: hsl(var(--hue-color), 12%, 38%);
+   --scroll-thumb-color: hsl(var(--hue-color), 12%, 26%);
 
-    /*========== Font and Typography ==========*/
-    --body-font: 'Poppins', sans-serif;
+   /*===== Font and Typography =====*/
+   --body-font: 'Poppins', sans-serif;
 
-    /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
-    --biggest-font-size: 3rem;
-    --h1-font-size: 2.25rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
-    --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smallder-font-size: .813rem;
+   /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
+   --biggest-font-size: 3rem;
+   --h1-font-size: 2.25rem;
+   --h2-font-size: 1.5rem;
+   --h3-font-size: 1.25rem;
+   --normal-font-size: 1rem;
+   --small-font-size: .875rem;
+   --smaller-font-size: .813rem;
 
-    /*==== Font Weight ====*/
-    --font-medium: 500;
-    --font-bold: 600;
+   /*===== Font Weight =====*/
+   --font-medium: 500;
+   --font-bold: 600;
 
-    /*===== margenes Bottom =====*/
-    --mb-0-25: .25rem;
-    --mb-0-5: .5rem;
-    --mb-0-75: .75rem;
-    --mb-1: 1rem;
-    --mb-1-5: 1.5rem;
-    --mb-2: 2rem;
-    --mb-2-5: 2.5rem;
-    --mb-3: 3rem;
+   /*===== Margenes Bottom =====*/
+   --mb-0-25: .25rem;
+   --mb-0-5: .5rem;
+   --mb-0-75: .75rem;
+   --mb-1: 1rem;
+   --mb-1-5: 1.5rem;
+   --mb-2: 2rem;
+   --mb-2-5: 2.5rem;
+   --mb-3: 3rem;
 
-    /*===== Z Index =====*/
-    --z-fixed: 10;
-    --z-modal: 100;
+   /*===== Z Index =====*/
+   --z-fixed: 10;
+   --z-modal: 100;
 }
 
 /* Responsive Typography */
@@ -54,8 +54,8 @@
         --h2-font-size: 1.25rem;
         --h3-font-size: 1.125rem;
         --normal-font-size: .938rem;
-        --small-font-size: .913rem;
-        --smallder-font-size: 0.75rem;
+        --small-font-size: .813rem;
+        --smaller-font-size: .75rem;
     }
 }
 
@@ -106,7 +106,17 @@ button, input {
     border: none;
     outline: none;
 }
+
 /*================ LAYOUT ================*/
+.container {
+    max-width: 1250px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.grid {
+    display: grid;
+}
 
 /*================ REUSABLE CSS CLASSES ================*/
 
@@ -198,10 +208,145 @@ button, input {
 }
 
 /*================ MAIN ================*/
-
+.main {
+    margin-left: 100px;
+} 
 /*================ HOME SECTION ================*/
+.home{
+    background: url('../img/eu-removebg-preview.png')no-repeat;
+    background-size:contain;
+    background-position: center right;
+    height: 100vh;
+}
+
+.home__container {
+    position: relative;
+    height: 100%;
+    align-items: center;
+}
+
+.home__social {
+    position: absolute;
+    top: 1.8rem;
+    left: 0;
+    display: flex;
+    align-items: center;
+    column-gap: 3.5rem;
+}
+
+.home__social-follow {
+    font-weight: var(--font-medium);
+    position: relative;
+}
+
+.home__social-follow::after {
+    content: '';
+    position: absolute;
+    width: 1rem;
+    height: 2px;
+    background-color: var(--text-color);
+    right: -45%;
+    top: 50%;
+}
+
+.home__social-links {
+    display: inline-flex;
+    column-gap: 1rem;
+
+}
+
+.home__social-link {
+    font-size: 1.08rem;
+    color: var(--text-color);
+    transition: .4s;
+}
+
+.home__social-link:hover {
+    transform: translateY(.25rem);
+}
+
+.home__img {
+    display: none;
+}
+
+.home__title {
+    font-size: var(--biggest-font-size);
+}
+
+.home__subtitle {
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-0-75);
+}
+
+.home__description {
+    max-width: 450px;
+    margin-bottom: var(--mb-2);
+}
+
+.my__info {
+    display: flex;
+    column-gap: 1.8rem;
+    position: absolute;
+    left: 0;
+    bottom: 1.8rem;
+}
+
+.info__item {
+    display: flex;
+    align-items: center;
+}
+
+.info__title, .info__subtitle {
+    font-size: var(--small-font-size);
+}
+
+.info__title {
+    font-weight: var(--font-medium);
+}
+
+.info__icon {
+    font-size: 1.8rem;
+    color: var(--skin-color);
+    margin-right: var(--mb-0-75);
+}
+
 
 /*================ BUTTONS ================*/
+.button {
+    display: inline-flex;
+    align-items: center;
+    column-gap: .5rem;
+    background-color: var(--skin-color);
+    color: var(--title-color);
+    padding: .75rem 1.4rem;
+    border-radius: .25rem;
+    font-weight: var(--font-medium);
+    position: relative;
+    z-index: 1;
+}
 
 
+.button::after {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #343a40;
+    z-index: -1;
+    transform-origin: center;
+    transform: scale(0);
+    border-radius: .25rem;
+    transition: .3s;
+}
+
+.button:hover::after {
+    transform: scale(1);
+}
+ 
+.button_icon {
+    font-size: 1.25rem;
+}
 /*================ ABOUT SECTION ================*/
