--- a/css/style.css
+++ b/css/style.css
@@ -1039,3 +1039,15 @@ textarea.input {
 .footer__title, .footer__subtitle, .footer__link, .footer__social {
     color: var(--title-color);
 }
+
+/*============== SCROLL BAR ================ */
+::-webkit-scrollbar {
+    width: .60rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+}
