Breakingpoint - small device

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,8 @@ button, input {
     width: 100px;
     height: 100vh;
     background-color:  var(--body-color);
-   border-right: 1px solid var(--box-color); 
+    border-right: 1px solid var(--box-color);
+    transition: .5s;
 }
 
 .nav__logo {
@@ -955,7 +956,7 @@ textarea.input {
     color: var(--text-color);
     font-weight: var(--font-medium);
     pointer-events: none;
-    z-index: 1000;
+    z-index: 15;
     transition: .5rem;
 }
 
@@ -973,7 +974,7 @@ textarea.input {
     font-size: var(--small-font-size);
     padding: 0 .4rem;
     pointer-events: none;
-    z-index: 500;
+    z-index: var(--z-fixed);
 }
 
 .input__container span::before, .input__container span::after {
@@ -1376,5 +1377,55 @@ textarea.input {
 
     .footer__links {
         justify-self: flex-start;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .container {
+        margin-left: var(--mb-1);
+        margin-right: var(--mb-1);
+    }
+
+    .home__img {
+        width: 200px;
+    }
+
+    .home__title {
+        font-size: var(--h1-font-size);
+    }
+
+    .home__subtitle {
+        font-size: var(--normal-font-size);
+    }
+
+    .about__info {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: .5rem;
+    }
+
+
+    .contact__container, .work__container,
+    .skills__container, .qualification__container {
+        grid-template-columns: 1fr;
+    }
+
+    .skills__title {
+        font-size: var(--normal-font-size);
+    }
+
+    .work__item {
+        font-size: var(--small-font-size);
+    }
+
+    .work__filters {
+        column-gap: .25rem;
+    }
+
+    .services__container {
+        grid-template-columns: max-content;
+    }
+
+    .services__content {
+        padding-right: 3.5rem;
     }
 }
